@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-13T08:29:31Z",
+  "timestamp" : "2022-06-13T16:36:01Z",
   "count_outdated" : 181,
   "uniques_outdated" : 81,
-  "count" : 206,
+  "count" : 207,
   "uniques" : 97,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-06-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
