@@ -1,3 +1,10 @@
+2022-06-13T16:36:01Z:
+* notice: last 14d: unq all: 2 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 81 181 / 97 206
+* notice: next accum: outdated-unq outdated-all / unq all: 81 181 / 97 207
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-13]
+
 2022-06-13T08:29:31Z:
 * notice: last 14d: unq all: 2 25
 * notice: prev accum: outdated-unq outdated-all / unq all: 81 181 / 96 206
